animation fixes; fit for mobile/narrow width

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
         <link rel="stylesheet" href="mediaqueries.css">
     </head>
     <body>
+        <!-- Ssreen load -->
+        <!-- <div class="screen-animation-container">
+          <div class="window1"></div>
+          <div class="window2"></div>
+          <div class="window3"></div>
+          <div class="window4"></div>
+        </div> -->
+
         <!-- desktop nav -->
         <nav id="desktop-nav">
             <div class="logo-container">
@@ -28,7 +36,7 @@
 
         <!-- hamburger nav -->
         <nav id="hamburger-nav">
-            <div class="spinner-container">
+            <!-- <div class="spinner-container">
                 <div class="spinner">
                     <div></div>
                     <div></div>
@@ -37,8 +45,10 @@
                     <div></div>
                     <div></div>
                 </div>
+            </div> -->
+            <div class="logo-container">
+              <div class="logo">HS</div>
             </div>
-            
             <div class="hamburger-menu" style="z-index:9999">
                 <div class="hamburger-icon" onclick="toggleMenu()">
                     <span></span>
