minor detail changes

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,21 @@
           <div class="window4"></div>
         </div> -->
 
+        <!-- top left icons -->
+        <div class="logo-container">
+          <div class="logo">HS</div>
+          <div id="socials-container">
+            <a href="https://www.linkedin.com/in/husam-solachuddin" target="_blank">
+                <img src="../assets/linkedin-w.png" alt="Check my LinkedIn out" class="icon">
+            </a>
+            <a href="https://github.com/Huspam" target="_blank">
+                <img src="../assets/github-w.png" alt="Check my GitHub out" class="icon">
+            </a>
+          </div>
+        </div>
+    
         <!-- desktop nav -->
         <nav id="desktop-nav">
-            <div class="logo-container">
-                <div class="logo">HS</div>
-            </div>
             <div class="links-container" style="z-index: 999">
                 <ul class="nav-links">
                     <li><a href="#profile">🚀</a></li>
@@ -46,9 +56,6 @@
                     <div></div>
                 </div>
             </div> -->
-            <div class="logo-container">
-              <div class="logo">HS</div>
-            </div>
             <div class="hamburger-menu" style="z-index:9999">
                 <div class="hamburger-icon" onclick="toggleMenu()">
                     <span></span>
@@ -91,14 +98,6 @@
                     onclick="sendEmail()">
                         Say Hi 👋
                     </button>
-                </div>
-                <div id="socials-container">
-                    <a href="https://www.linkedin.com/in/husam-solachuddin" target="_blank">
-                        <img src="../assets/linkedin-w.png" alt="Check my LinkedIn out" class="icon">
-                    </a>
-                    <a href="https://github.com/Huspam" target="_blank">
-                        <img src="../assets/github-w.png" alt="Check my GitHub out" class="icon">
-                    </a>
                 </div>
             </div>
         </section>
@@ -243,6 +242,8 @@
               onclick="location.href='./#contact'"
             />
         </section>
+        
+        <!-- scripts -->
         <script src="script.js"></script>
     </body>
 </html>
