--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
             <div class="links-container" style="z-index: 999">
                 <ul class="nav-links">
                     <li><a href="#profile">🚀</a></li>
-                    <li><a href="#about">About Me</a></li>
-                    <li><a href="#experience">My Experience</a></li>
+                    <!-- <li><a href="#about">About Me</a></li> -->
                     <li><a href="#projects">My Projects</a></li>
+                    <li><a href="#experience">My Experience</a></li>
                     <li><a href="#faq">Husam's FAQ</a></li>
                     <li><a href="#contact">My Contact</a></li>
                 </ul>
@@ -64,9 +64,9 @@
                 </div>
                 <div class="menu-links">
                     <p><br>. . .<br></p>
-                    <li><a href="#about" onclick="toggleMenu()">About Me</a></li>
-                    <li><a href="#experience" onclick="toggleMenu()">My Experience</a></li>
+                    <!-- <li><a href="#about" onclick="toggleMenu()">About Me</a></li> -->
                     <li><a href="#projects" onclick="toggleMenu()">My Projects</a></li>
+                    <li><a href="#experience" onclick="toggleMenu()">My Experience</a></li>
                     <li><a href="#faq" onclick="toggleMenu()">Husam's FAQ</a></li>
                     <li><a href="#contact" onclick="toggleMenu()">My Contact</a></li>
                 </div>
@@ -76,7 +76,7 @@
         <!-- profile -->
         <section id="profile">
             <div class="section__pic-container">
-                <img src="../assets/profile-pic.png" class="main-pfp" alt="Me :D">
+                <img src="../assets/profile-pic.png" href="#about" class="main-pfp" alt="Me :D">
                 <!-- <div class="plane">✈</div> -->
             </div>
             <div class="section__text">
@@ -100,59 +100,6 @@
                     </button>
                 </div>
             </div>
-        </section>
-
-        <!-- about me -->
-        <section id="about">
-            <p class="section__text__p1">Get To Know More</p>
-            <h1 class="title">About Me</h1>
-            <div class="section-container">
-              <div class="section__pic-container">
-                <img
-                  src="./assets/about-pic.png"
-                  alt="Profile picture"
-                  class="about-pic"
-                />
-              </div>
-              <div class="about-details-container">
-                <div class="about-containers">
-                  <div class="details-container">
-                    <img
-                      src="./assets/experience.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <h3>Experience</h3>
-                    <p>2+ years <br />Frontend Development</p>
-                  </div>
-                  <div class="details-container">
-                    <img
-                      src="./assets/education.png"
-                      alt="Education icon"
-                      class="icon"
-                    />
-                    <h3>Education</h3>
-                    <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
-                  </div>
-                </div>
-                <div class="text-container">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-                    reprehenderit et laborum, rem, dolore eum quod voluptate
-                    exercitationem nobis, nihil esse debitis maxime facere minus sint
-                    delectus velit in eos quo officiis explicabo deleniti dignissimos.
-                    Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-                    reiciendis ea magnam? Nulla, impedit fuga!
-                  </p>
-                </div>
-              </div>
-            </div>
-            <img
-              src="./assets/arrow.png"
-              alt="Arrow icon"
-              class="icon arrow"
-              onclick="location.href='./#experience'"
-            />
         </section>
 
         <!-- projects -->
@@ -242,7 +189,172 @@
               onclick="location.href='./#contact'"
             />
         </section>
-        
+
+        <!-- experience -->
+        <section id="experience">
+          <p class="section__text__p1">Explore My</p>
+          <h1 class="title">Experience</h1>
+          <div class="experience-details-container">
+            <div class="about-containers">
+              <div class="details-container">
+                <h2 class="experience-sub-title">Frontend Development</h2>
+                <div class="article-container">
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>HTML</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>CSS</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>SASS</h3>
+                      <p>Intermediate</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>JavaScript</h3>
+                      <p>Basic</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>TypeScript</h3>
+                      <p>Basic</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>Material UI</h3>
+                      <p>Intermediate</p>
+                    </div>
+                  </article>
+                </div>
+              </div>
+              <div class="details-container">
+                <h2 class="experience-sub-title">Frontend Development</h2>
+                <div class="article-container">
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>PostgreSQL</h3>
+                      <p>Basic</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>Node JS</h3>
+                      <p>Intermediate</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>Express JS</h3>
+                      <p>Intermediate</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3>Git</h3>
+                      <p>Intermediate</p>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+          </div>
+          <img
+            src="./assets/arrow.png"
+            alt="Arrow icon"
+            class="icon arrow"
+            onclick="location.href='./#projects'"
+          />
+        </section>
+
+        <!-- faq -->
+        <section id="faq">
+          Nothing yet
+        </section>
+
+        <!-- contact -->
+        <section id="contact">
+          <p class="section__text__p1">Get in Touch</p>
+          <h1 class="title">Contact Me</h1>
+          <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+              <img
+                src="./assets/email.png"
+                alt="Email icon"
+                class="icon contact-icon email-icon"
+              />
+              <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+            </div>
+            <div class="contact-info-container">
+              <img
+                src="./assets/linkedin.png"
+                alt="LinkedIn icon"
+                class="icon contact-icon"
+              />
+              <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+            </div>
+          </div>
+        </section>
+
         <!-- scripts -->
         <script src="script.js"></script>
     </body>
