--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="mediaqueries.css">
     </head>
     <body>
-        <!-- Ssreen load -->
+        <!-- Screen load -->
         <!-- <div class="screen-animation-container">
           <div class="window1"></div>
           <div class="window2"></div>
@@ -36,10 +36,10 @@
                 <ul class="nav-links">
                     <li><a href="#profile">🚀</a></li>
                     <!-- <li><a href="#about">About Me</a></li> -->
-                    <li><a href="#projects">My Projects</a></li>
-                    <li><a href="#experience">My Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#experience">Experience</a></li>
                     <li><a href="#faq">Husam's FAQ</a></li>
-                    <li><a href="#contact">My Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -65,10 +65,10 @@
                 <div class="menu-links">
                     <p><br>. . .<br></p>
                     <!-- <li><a href="#about" onclick="toggleMenu()">About Me</a></li> -->
-                    <li><a href="#projects" onclick="toggleMenu()">My Projects</a></li>
-                    <li><a href="#experience" onclick="toggleMenu()">My Experience</a></li>
+                    <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
                     <li><a href="#faq" onclick="toggleMenu()">Husam's FAQ</a></li>
-                    <li><a href="#contact" onclick="toggleMenu()">My Contact</a></li>
+                    <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
                 </div>
             </div>
         </nav>
@@ -103,91 +103,90 @@
         </section>
 
         <!-- projects -->
-        <section id="projects">
-            <p class="section__text__p1">Browse My Recent</p>
-            <h1 class="title">Projects</h1>
-            <div class="experience-details-container">
-              <div class="about-containers">
-                <div class="details-container color-container">
-                  <div class="article-container">
-                    <img
-                      src="./assets/project-1.png"
-                      alt="Project 1"
-                      class="project-img"
-                    />
+        <section id="projects" class="projects-section">
+          <p class="section__text__p1">Browse My Recent</p>
+          <h1 class="title">Projects</h1>
+          <div class="experience-details-container">
+            <div class="about-containers">
+
+              <!-- project1 -->
+              <div class="details-container-color-container">
+                <!-- img slider -->
+                <div class="slider">
+                  <figure>
+                    <img src="../assets/sentinel-1_sar_turkey.jpg">
+                    <img src="../assets/sentinel-2.jpg">
+                    <img src="../assets/viirs.jpg">
+                    <img src="../assets/sentinel-2.jpg">
+                    <img src="../assets/sentinel-1_sar_turkey.jpg">
+                  </figure>
+                </div>
+
+                <!-- about -->
+                <div class="section__text">
+                  <div class="intro">
+                    <h2 class="experience-sub-title project-title">Identifying Unelectrified Settlements</h2>
                   </div>
+                  <div class="projtxt">
+                    <p>Full stack deep learning project involving remote sensing data.</p>
+                  </div>
+                  <a href="https://github.com/Huspam" target="_blank">
+                    <img src="../assets/github-w.png" alt="Check my GitHub out" class="icon">
+                  </a>
+                </div>
+              </div>
+
+              <!-- project2 -->
+              <div class="details-container-color-container">
+                <!-- img slider -->
+                <div class="slider">
+                  <figure>
+                    <img src="../assets/sentinel-1_sar_turkey.jpg">
+                    <img src="../assets/sentinel-2.jpg">
+                    <img src="../assets/viirs.jpg">
+                    <img src="../assets/sentinel-1_sar_turkey.jpg">
+                  </figure>
+                </div>
+                
+                <!-- about -->
+                <div class="section__text">
+                <div class="intro">
                   <h2 class="experience-sub-title project-title">Project One</h2>
-                  <div class="btn-container">
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Github
-                    </button>
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Live Demo
-                    </button>
-                  </div>
                 </div>
-                <div class="details-container color-container">
-                  <div class="article-container">
-                    <img
-                      src="./assets/project-2.png"
-                      alt="Project 2"
-                      class="project-img"
-                    />
-                  </div>
-                  <h2 class="experience-sub-title project-title">Project Two</h2>
-                  <div class="btn-container">
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Github
-                    </button>
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Live Demo
-                    </button>
-                  </div>
+                <div class="btn-container">
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                 </div>
-                <div class="details-container color-container">
-                  <div class="article-container">
-                    <img
-                      src="./assets/project-3.png"
-                      alt="Project 3"
-                      class="project-img"
-                    />
+              </div>
+                
+              </div>
+
+              <!-- project3 -->
+              <div class="details-container-color-container">
+                <!-- img slider -->
+                <div class="slider">
+                  <figure>
+                    <img src="../assets/sentinel-1_sar_turkey.jpg">
+                    <img src="../assets/sentinel-2.jpg">
+                    <img src="../assets/viirs.jpg">
+                    <img src="../assets/sentinel-1_sar_turkey.jpg">
+                  </figure>
+                </div>
+
+                <!-- about -->
+                <div class="section__text">
+                  <div class="intro">
+                    <h2 class="experience-sub-title project-title">Project One</h2>
                   </div>
-                  <h2 class="experience-sub-title project-title">Project Three</h2>
                   <div class="btn-container">
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Github
-                    </button>
-                    <button
-                      class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
-                    >
-                      Live Demo
-                    </button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                   </div>
                 </div>
               </div>
             </div>
-            <img
-              src="./assets/arrow.png"
-              alt="Arrow icon"
-              class="icon arrow"
-              onclick="location.href='./#contact'"
-            />
+          </div>
+          <img src="../assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
         </section>
 
         <!-- experience -->
@@ -195,140 +194,25 @@
           <p class="section__text__p1">Explore My</p>
           <h1 class="title">Experience</h1>
           <div class="experience-details-container">
-            <div class="about-containers">
-              <div class="details-container">
-                <h2 class="experience-sub-title">Frontend Development</h2>
-                <div class="article-container">
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>HTML</h3>
-                      <p>Experienced</p>
-                    </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>CSS</h3>
-                      <p>Experienced</p>
-                    </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>SASS</h3>
-                      <p>Intermediate</p>
-                    </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>JavaScript</h3>
-                      <p>Basic</p>
-                    </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>TypeScript</h3>
-                      <p>Basic</p>
-                    </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>Material UI</h3>
-                      <p>Intermediate</p>
-                    </div>
-                  </article>
-                </div>
-              </div>
-              <div class="details-container">
-                <h2 class="experience-sub-title">Frontend Development</h2>
-                <div class="article-container">
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>PostgreSQL</h3>
-                      <p>Basic</p>
-                    </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>Node JS</h3>
-                      <p>Intermediate</p>
-                    </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>Express JS</h3>
-                      <p>Intermediate</p>
-                    </div>
-                  </article>
-                  <article>
-                    <img
-                      src="./assets/checkmark.png"
-                      alt="Experience icon"
-                      class="icon"
-                    />
-                    <div>
-                      <h3>Git</h3>
-                      <p>Intermediate</p>
-                    </div>
-                  </article>
-                </div>
-              </div>
-            </div>
+            empty
           </div>
           <img
-            src="./assets/arrow.png"
+            src="../assets/arrow.png"
             alt="Arrow icon"
             class="icon arrow"
-            onclick="location.href='./#projects'"
+            onclick="location.href='./#faq'"
           />
         </section>
 
         <!-- faq -->
         <section id="faq">
           Nothing yet
+          <img
+            src="../assets/arrow.png"
+            alt="Arrow icon"
+            class="icon arrow"
+            onclick="location.href='./#contact'"
+          />
         </section>
 
         <!-- contact -->
@@ -338,7 +222,7 @@
           <div class="contact-info-upper-container">
             <div class="contact-info-container">
               <img
-                src="./assets/email.png"
+                src="../assets/email.png"
                 alt="Email icon"
                 class="icon contact-icon email-icon"
               />
@@ -346,7 +230,7 @@
             </div>
             <div class="contact-info-container">
               <img
-                src="./assets/linkedin.png"
+                src="../assets/linkedin.png"
                 alt="LinkedIn icon"
                 class="icon contact-icon"
               />
